Browser speech recognision api used

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta charset="utf-8">
     <style>
       html { overflow: hidden; }
-      body {
+      .recording {
         font: 14pt Arial, sans-serif;
         background: lightgrey;
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 50vh;
         width: 100%;
         margin: 0 0;
       }
@@ -45,8 +45,26 @@
         justify-content: space-around;
         align-items: center;
       }
+      .chat {
+          font: 14pt Arial, sans-serif;
+          background: lightgrey;
+          display: flex;
+          flex-direction: row;
+          height: 50vh;
+          width: 100%;
+          margin: 0 0;
+          align-content: space-between;
+      }
+      .chat_container {
+          width: 80%;
+          background: white;
+          border: 1px solid black;
+      }
+      .speak_button {
+          /*align-content: flex-end;*/
+      }
       @media (orientation: landscape) {
-        body { flex-direction: row;}
+        .recording { flex-direction: row;}
         #controls { flex-direction: column; height: 100%; width: 10%;}
         #viz { height: 100%; width: 90%;}
       }
@@ -54,14 +72,21 @@
     </style>
   </head>
   <body>
-    <div id="viz">
-      <canvas id="analyser" width="1024" height="500"></canvas>
-      <canvas id="wavedisplay" width="1024" height="500"></canvas>
+    <div class="recording">
+        <div id="viz">
+            <canvas id="analyser" width="1024" height="200"></canvas>
+            <canvas id="wavedisplay" width="1024" height="200"></canvas>
+        </div>
+        <div id="controls">
+            <img id="record" src="/public/img/mic128.png" onclick="toggleRecording(this);">
+            <a id="save" href="#"><img src="/public/img/save.svg"></a>
+        </div>
     </div>
-    <div id="controls">
-      <img id="record" src="/public/img/mic128.png" onclick="toggleRecording(this);">
-      <a id="save" href="#"><img src="/public/img/save.svg"></a>
+    <div class="chat">
+        <textarea class="chat_container"></textarea>
+        <button class="speak_button">Speak</button>
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="/public/javascript/audiodisplay.js"></script>
     <script type="text/javascript" src="/public/javascript/recorder.js"></script>
